--- a/config/awips_scmi.yml
+++ b/config/awips_scmi.yml
@@ -11,6 +11,7 @@ configs:
        ibands:
          grid: polar_alaska_300
          bands:  "i01 i02 i03 i04 i05 i_solar_zenith_angle i_sat_zenith_angle"
+     'viirs_sdr ':
        mbands:
          grid: polar_alaska_700
          bands: "m03 m04 m08 m09 m10 m11 m12 m13 m14 m15 m16 dynamic_dnb dnb adaptive_dnb hncc_dnb m_solar_zenith_angle m_sat_zenith_angle"
