--- a/config/viirs_awips.yml
+++ b/config/viirs_awips.yml
@@ -1,5 +1,5 @@
 driver: viirs2awips.sh
-driver_crefl: crefl2awips.sh
+driver_crefl_old: crefl2awips.sh
 configs:
   default:
    options: "--grid-coverage 0 --source-name UAF --output-pattern \"UAF_AWIPS_{satellite}_{instrument}_{product_name}_{grid_name}_{begin_time}\" "
