--- a/config/nucaps_l2.yml
+++ b/config/nucaps_l2.yml
@@ -2,19 +2,19 @@ driver: viirs2awips.sh
 driver_crefl: crefl2awips.sh
 configs:
   npp:
-   driver: "run_heap.bash -s npp --noclean -d /opt/cspp/dyno/nucaps_anc -vv -m HR_IRMW -p 2 "
+   driver: "run_heap.bash -s npp --noclean -d /cspp/dyno/nucaps_anc -vv -m HR_IRMW -p 2 "
    save: 
      - "*.nc"
   noaa20:
-    driver: "run_heap.bash -s j01 --noclean -d /opt/cspp/dyno/nucaps_anc -vv  -m HR_IRMW -p 2 "
+    driver: "run_heap.bash -s j01 --noclean -d /cspp/dyno/nucaps_anc -vv  -m HR_IRMW -p 2 "
     save:
       - "*.nc"
   metop-b:
-    driver: "run_heap.bash -s m01 --noclean -d /opt/cspp/dyno/nucaps_anc -vv -p 2 "
+    driver: "run_heap.bash -s m01 --noclean -d /cspp/dyno/nucaps_anc -vv -p 2 "
     save: 
       - "*.nc"
   metop-c:
-    driver: "run_heap.bash -s m03 --noclean -d /opt/cspp/dyno/nucaps_anc -vv -p 2 "
+    driver: "run_heap.bash -s m03 --noclean -d /cspp/dyno/nucaps_anc -vv -p 2 "
     save:
       - "*.nc"     
 limits:
