--- a/config/acspo_l2.yml
+++ b/config/acspo_l2.yml
@@ -2,31 +2,31 @@
 configs: 
   npp: 
     driver: "/cspp/CSPP_ACSPO_2_0/scripts/run_acspo.bash  "
-    options: " -s npp --dynanc=/cspp/dyno/sst "
+    options: " -p 2 -s npp --dynanc=/cspp/dyno/sst "
     bias: /opt/cspp/bias
     save: 
       - "*.nc"
   terra:   
     driver: "/cspp/CSPP_ACSPO_2_0/scripts/run_acspo.bash --dynanc=/cspp/dyno/sst "
-    options: " -s terra -vv "
+    options: " -p 2 -s terra -vv "
     bias: /opt/cspp/bias
     save: 
       - "*.nc"
   aqua:   
     driver: "/cspp/CSPP_ACSPO_2_0/scripts/run_acspo.bash --dynanc=/cspp/dyno/sst "
-    options: " -s aqua -vv "
+    options: "-p 2 -s aqua -vv "
     bias: /opt/cspp/bias
     save:
       - "*.nc"
   n19:
     driver: "/cspp/CSPP_ACSPO_2_0/scripts/run_acspo.bash --dynanc=/cspp/dyno/sst "
-    options: " -s n19 -vv "
+    options: " -p 2 -s n19 -vv "
     bias: /opt/cspp/bias
     save:
       - "*.nc"
   n18:
     driver: "/cspp/CSPP_ACSPO_2_0/scripts/run_acspo.bash --dynanc=/cspp/dyno/sst "
-    options: " -s n18 -vv "
+    options: "-p 2 -s n18 -vv "
     bias: /opt/cspp/bias
     save:
       - "*.nc"
