--- a/config/nucaps_sdr.yml
+++ b/config/nucaps_sdr.yml
@@ -1,8 +1,8 @@
 configs:
   nucaps:
     tasks:
-      - "snpp_sdr.rb -m cris  "
-      - "snpp_sdr.rb -m atms "
+      - "snpp_sdr.rb -p 4 -m cris  "
+      - "snpp_sdr.rb -p 4 -m atms "
 limits:
   processor: 1
 env: $CSPP_SDR_HOME/cspp_sdr_env.sh
