--- a/config/feeder_geotif.yml
+++ b/config/feeder_geotif.yml
@@ -1,4 +1,110 @@
 configs:
+  noaa21:
+   mapper:
+     dnb: noaa21_viirs_dynamic_dnb_*_alaska_600.tif
+     dnb_adaptive: noaa21_viirs_adaptive_dnb_*_alaska_600.tif
+     i01: noaa21_viirs_i01*_alaska_300.tif
+     i02: noaa21_viirs_i02*_alaska_300.tif
+     i03: noaa21_viirs_i03*_alaska_300.tif
+     i04: noaa21_viirs_i04*_alaska_300.tif
+     i05: noaa21_viirs_i05*_alaska_300.tif
+     i01_float: noaa21_viirs_i01*_alaska_300.float.tif
+     i02_float: noaa21_viirs_i02*_alaska_300.float.tif
+     i03_float: noaa21_viirs_i03*_alaska_300.float.tif
+     i04_float: noaa21_viirs_i04*_alaska_300.float.tif
+     i05_float: noaa21_viirs_i05*_alaska_300.float.tif
+     m02: noaa21_viirs_m02_*_alaska_600.tif
+     m03: noaa21_viirs_m02_*_alaska_600.tif
+     m04: noaa21_viirs_m02_*_alaska_600.tif
+     m05: noaa21_viirs_m02_*_alaska_600.tif
+     m06: noaa21_viirs_m02_*_alaska_600.tif
+     m07: noaa21_viirs_m02_*_alaska_600.tif
+     m08: noaa21_viirs_m02_*_alaska_600.tif
+     m10: noaa21_viirs_m10_*_alaska_600.tif
+     m11: noaa21_viirs_m11_*_alaska_600.tif
+     m12: noaa21_viirs_m12_*_alaska_600.tif
+     m15: noaa21_viirs_m02_*_alaska_600.tif
+     m10_float: noaa21_viirs_m10_*_alaska_600.float.tif
+     m11_float: noaa21_viirs_m11_*_alaska_600.float.tif
+     m12_float: noaa21_viirs_m12_*_alaska_600.float.tif
+     m11_300_float: noaa21_viirs_m11_*_alaska_300.float.tif
+     m12_300_float: noaa21_viirs_m12_*_alaska_300.float.tif
+     m16_300_float: noaa21_viirs_m16_*_alaska_300.float.tif
+     m08_300: noaa21_viirs_m08_*_alaska_300.tif
+     true_color: noaa21_viirs_true_color_*_alaska_300.tif
+     crefl01: noaa21_viirs_viirs_crefl01_*_alaska_300.tif
+     crefl03: noaa21_viirs_viirs_crefl03_*_alaska_300.tif
+     crefl04: noaa21_viirs_viirs_crefl04_*_alaska_300.tif
+     crefl08: noaa21_viirs_viirs_crefl08_*_alaska_300.tif
+   single:
+   - title: true_color
+     band: true_color
+     name: "noaa21.%Y%m%d.%H%M_true_color"
+   - title: dnb
+     band: dnb
+     name: "noaa21.%Y%m%d.%H%M_DNB"
+   - title: dnb-adaptive
+     band: dnb_adaptive
+     name: "noaa21.%Y%m%d.%H%M_DNB_adaptive"
+   - title: thermal
+     band: "i05"
+     name: "noaa21.%Y%m%d.%H%M_I05"
+   - title: "i03"
+     band: "i03"
+     name: "noaa21.%Y%m%d.%H%M_I03"
+   - title: "i04"
+     band: "i04"
+     name: "noaa21.%Y%m%d.%H%M_I04"
+   combinations:
+   - title: landcolor
+     bands:
+       r: "i03"
+       g: "i02"
+       b: "i01"
+     name: "noaa21.%Y%m%d.%H%M_I03_I02_I01"
+   extras:
+   - title: viirs_fire_temperature
+     bands:
+       r: "m12_float"
+       g: "m11_float"
+       b: "m10_float"
+     tool: "viirs_fire_stretch --blue-cap 0.75 "
+     name: "noaa21.%Y%m%d.%H%M_m12_m11_m10"
+   - title: viirs_fire_color
+     bands:
+       r: "i04_float"
+       g: "i02_float"
+       b: "i01_float"
+     tool: "viirs_fire_stretch --blue-cap 1.0 "
+     name: "noaa21.%Y%m%d.%H%M_i04_i02_i01"
+   - title: viirs_i4_colored
+     bands:
+       r: "i04_float"
+       g: "i04_float"
+       b: "i04_float"
+     tool: "color_thermal_long_wave.rb"
+     name: "noaa21.%Y%m%d.%H%M_i04_colored"
+   - title: viirs_i5_colored
+     bands:
+       r: "i05_float"
+       g: "i05_float"
+       b: "i05_float"
+     tool: "color_thermal_long_wave.rb --colormap /opt/gina/sandy-utils-1.7.1-20201216153420/processing-utils/config/i05.k.cmap "
+     name: "noaa21.%Y%m%d.%H%M_i05_colored"
+   - title: night-time-microphysics
+     bands:
+       r: "i05_float"
+       g: "m16_300_float"
+       b: "i04_float"
+     tool: "night_microphysics"
+     name: "noaa21.%Y%m%d.%H%M_micro_physics"
+   - title: snow-melt
+     bands:
+       r: "i03"
+       g: "m08_300"
+       b: "i01"
+     tool: "snow_melt"
+     name: "noaa21.%Y%m%d.%H%M_i03_m08_i01"
   npp: 
    mapper:
      dnb: npp_viirs_dynamic_dnb_*_alaska_600.tif
