--- a/config/rtstps.yml
+++ b/config/rtstps.yml
@@ -4,5 +4,9 @@ configs:
   a1: "/opt/rt-stps/config/aqua.xml"
   noaa20: "/opt/rt-stps/config/jpss1.xml"
   noaa21: "/opt/rt-stps/config/jpss2.xml"
-  gcomw: "/opt/rt-stps/config/GCOM-W1.xml"
+  gcomw:  "/opt/rt-stps/config/GCOM-W1.xml"
 rtstps_driver: "/opt/rt-stps/bin/batch.sh"
+source:
+  uafgina: /gluster/cache/antenna/uafgina
+  gilmore: /gluster/cache/antenna/gilmore
+
