--- a/config/awips_scmi.yml
+++ b/config/awips_scmi.yml
@@ -10,11 +10,11 @@ configs:
      viirs_sdr: 
        ibands:
          grid: polar_alaska_300
-         bands:  "i01 i02 i03 i04 i05 "
+         bands:  "i01 i02 i03 i04 i05 crefl08 "
      'viirs_sdr ':
        mbands:
          grid: polar_alaska_700
-         bands: "m03 m04 m08 m09 m10 m11 m12 m13 m14 m15 m16 dynamic_dnb adaptive_dnb hncc_dnb viirs_crefl03 viirs_crefl04"
+         bands: "m03 m04 m08 m09 m10 m11 m12 m13 m14 m15 m16 dynamic_dnb adaptive_dnb hncc_dnb viirs_crefl01 viirs_crefl03 viirs_crefl04"
   modis:
    options: " --num-workers 4 --sector-id Polar --letters --compress --fix-awips --output-filename 'UAF_AII_{satellite}_{instrument}_{product_name}_{sector_id}_{tile_id}_{start_time:%Y%m%d_%H%M}.nc' "
    save:
